--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,20 @@
       ]
     },
     {
+      "name": "Launch web dev",
+      "request": "launch",
+      "type": "dart",
+      "program": "ragapp_frontend/lib/main_development.dart",
+      "args": [
+        "--flavor",
+        "development",
+        "--target",
+        "lib/main_development.dart",
+        "--web-browser-flag",
+        "--disable-web-security"
+      ]
+    },
+    {
       "name": "Launch dev debug",
       "request": "launch",
       "type": "dart",
