--- a/ragapp_frontend/pubspec.yaml
+++ b/ragapp_frontend/pubspec.yaml
@@ -8,13 +8,18 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  collection: ^1.18.0
   dio: ^5.5.0+1
+  expandable: ^5.0.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  get_it: ^7.7.0
   intl: ^0.19.0
+  shadcn_ui: ^0.6.4
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   bloc_test: ^9.1.7
