--- a/ragapp_frontend/pubspec.yaml
+++ b/ragapp_frontend/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_chat_ui: ^1.6.14
   flutter_localizations:
     sdk: flutter
   get_it: ^7.7.0
