--- a/ragapp_frontend/pubspec.yaml
+++ b/ragapp_frontend/pubspec.yaml
@@ -15,17 +15,28 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_chat_ui: ^1.6.14
+  flutter_highlight: ^0.7.0
   flutter_localizations:
     sdk: flutter
+  flutter_markdown: ^0.7.3
+  freezed_annotation: ^2.4.4
   get_it: ^7.7.0
+  gpt_markdown: ^0.1.5
   intl: ^0.19.0
+  json_annotation: ^4.9.0
+  markdown_widget: ^2.3.2+6
+  responsive_sizer: ^3.3.1
   shadcn_ui: ^0.6.4
   shared_preferences: ^2.2.3
+  syntax_highlight: ^0.4.0
 
 dev_dependencies:
   bloc_test: ^9.1.7
+  build_runner: ^2.4.11
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.2
+  json_serializable: ^6.8.0
   mocktail: ^1.0.4
   very_good_analysis: ^6.0.0
 
