--- a/ragapp_frontend/pubspec.yaml
+++ b/ragapp_frontend/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_markdown: ^0.7.3
+  fpdart: ^1.1.0
   freezed_annotation: ^2.4.4
   get_it: ^7.7.0
   gpt_markdown: ^0.1.5
